--- a/managment-atm-wpf/MainWindow.xaml
+++ b/managment-atm-wpf/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:managment_atm_wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="200" Width="400">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
+        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" Content="Довольны ли вы своей зарплатой?" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
+        <Button x:Name="ButtonYes" Content="Да" Margin="20,8,20,8" Grid.Row="1"/>
+        <Button x:Name="ButtonNo" Content="Нет" Grid.Column="1" Margin="20,8,20,8" Grid.Row="1"/>
     </Grid>
 </Window>
